# nexus-cosmic

./: CNAME  CONTRIBUTING.md  DOCUMENTATION.md  DOCUMENTATION_FR.md  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py  weak_hardware_engine.py
nexus_cosmic/: __init__.py
nexus_cosmic.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
nexus_cosmic/core/: __init__.py  base.py  engine.py  entity.py  laws.py  topology.py
nexus_cosmic/validation/: __init__.py  validator.py
tests/: test_all.py
